--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <link href="assets/css/sb-admin-2.min.css" rel="stylesheet">
 </head>
 
-<body id="page-top">
+<body id="page-top" class="bg-gradient-primary">
   <app-root></app-root>
   <!-- Bootstrap core JavaScript-->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
